--- a/source/_posts/P2717.md
+++ b/source/_posts/P2717.md
@@ -1,9 +1,9 @@
 ---
-title: OI经典题目
+title: P2717题解
 date: 2021-06-29
 tags:
- - 大杂烩
-categories: 大杂烩
+ - 平衡树
+categories: 题解
 description: 一些OI经典题目。
 top_img: https://api.dujin.org/bing/1920.php
 cover: https://tvax4.sinaimg.cn/large/0072Vf1pgy1foxlhjn4x1j31hc0u04fr.jpg
