--- a/source/_posts/苏武令·塞上风高.md
+++ b/source/_posts/苏武令·塞上风高.md
@@ -10,7 +10,7 @@ top_img: https://api.dujin.org/bing/1920.php
 cover: https://api.dujin.org/bing/1920.php
 ---
 
-**准备完了才想起来好像让讲的是诗来着，没事，就先凑合着来吧**
+**准备完了才想起来好像让讲的是诗来着，问题不大，就先凑合着来吧**
 
 <center><h1>苏武令·塞上风高</h1></center>
 
