--- a/source/_posts/苏武令·塞上风高.md
+++ b/source/_posts/苏武令·塞上风高.md
@@ -7,12 +7,35 @@ tags:
 categories: 语文
 description: 语文课前讲诗~ 轮到我出场了嘛！
 top_img: https://api.dujin.org/bing/1920.php
-cover: https://api.dujin.org/bing/1920.php
+cover: https://tva4.sinaimg.cn/large/0075LAc9ly1h6pwmrjtynj30ro0dx17w.jpg
 ---
-
-**准备完了才想起来好像让讲的是诗来着，问题不大，就先凑合着来吧**
 
 <center><h1>苏武令·塞上风高</h1></center>
 
 <center><h3>塞上风高，渔阳秋早。惆怅翠华音杳。驿使空驰，征鸿归尽，不寄双龙消耗。念白衣、金殿除恩，归黄阁、未成图报。<br>
 谁信我、致主丹衷，伤时多故，未作救民方召。调鼎为霖，登坛作将，燕然即须平扫。拥精兵十万，横行沙漠，奉迎天表。</h3></center>
+
+{% hideToggle 临江仙·金锁重门荒苑静 %}
+
+> 金锁重门荒苑静，绮窗愁对秋空。翠华一去寂无踪。玉楼歌吹，声断已随风。
+> 烟月不知人事改，夜阑还照深宫。藕花相向野塘中，暗伤亡国，清露泣香红。
+
+{% endhideToggle %}
+
+{% hideToggle 关于「建议」…… %}
+
+> 夫外御强敌，内销盗贼，修军政，变士风，裕邦财，宽民力，改弊法，省冗官，诚号令以感人心，信赏罚以作士气，择帅臣以任方面，选监司、郡守以奉行新政，俟吾所以自治者政事已修，然后可以问罪金人，迎还二圣，此所谓规模也。
+
+{% endhideToggle %}
+
+{% hideToggle 关于「调鼎」…… %}
+
+> 伊尹负鼎俎调五味而为相。
+
+{% endhideToggle %}
+
+{% hideToggle 关于「将才」…… %}
+
+> 靖康元年，斡离不围宋京师，宋李纲督将士拒之。又攻陈桥、封邱、卫州门，纲登城督战，杀数千人，乃退
+
+{% endhideToggle %}
