--- a/source/_posts/渭上秋夕闲望.md
+++ b/source/_posts/渭上秋夕闲望.md
@@ -34,8 +34,21 @@ cover: https://tva4.sinaimg.cn/large/0075LAc9ly1h6pwmrjtynj30ro0dx17w.jpg
 
 {% endhideToggle %}
 
+{% hideToggle 选择题答案 %}
+
+ > D
+
+{% endhideToggle %}
+
 {% hideToggle 简答题 %}
 
 > 本诗颌领联写了哪些意象？结合写法，简要分析其内容。(6分）
+
+{% endhideToggle %}
+
+{% hideToggle 简答题答案 %}
+
+> ①诗歌颔联主要写了残阳、雨、鸣蝉三种意象。
+> ②采用视听结合、动静结合的手法，“残阳初过雨”从视觉角度写，属于静态描写，“何地不鸣蝉”从听觉角度写，属于动态描写；静谧的黄昏时分，一阵雨刚过，天上挂着一轮西沉的残阳，四周响起了蝉的鸣叫声。
 
 {% endhideToggle %}
