--- a/source/_posts/渭上秋夕闲望.md
+++ b/source/_posts/渭上秋夕闲望.md
@@ -25,8 +25,8 @@ cover: https://tva4.sinaimg.cn/large/0075LAc9ly1h6pwmrjtynj30ro0dx17w.jpg
 
 
 {% hideToggle 注释 %}
-<h4> ①此诗作于潘间早年落拓江湖之时。<br>
-②太公，即吕尚，相传他垂钓于渭水之滨，周文王和他相遇，谈得极为投机，即拜为师。后帮助武王伐约灭殷，建立周朝。<h4>
+> <h4> ①此诗作于潘间早年落拓江湖之时。<br>
+> ②太公，即吕尚，相传他垂钓于渭水之滨，周文王和他相遇，谈得极为投机，即拜为师。后帮助武王伐约灭殷，建立周朝。<h4>
  
 {% endhideToggle %}
 
