--- a/source/_posts/渭上秋夕闲望.md
+++ b/source/_posts/渭上秋夕闲望.md
@@ -12,6 +12,8 @@ cover: https://tva4.sinaimg.cn/large/0075LAc9ly1h6pwmrjtynj30ro0dx17w.jpg
 
 <center><h1>渭上秋夕闲望</h1></center>
 
+<div class='tip'><p>这首诗我在百度上查了好久，知乎上问了也没人回答，知网甚至都查了，啥资料都没有，只好乱讲了</p></div>
+
 <center><h3>
 
 秋色满秦川，登临渭水边。<br>
@@ -37,7 +39,7 @@ cover: https://tva4.sinaimg.cn/large/0075LAc9ly1h6pwmrjtynj30ro0dx17w.jpg
 下列对诗歌相关内容和艺术手法的鉴赏分析，正确的一项是（3分）<br>
 
  > A ．诗题中的"秋夕"点明了具体的时令，"闲望"是悠闲远眺的意思，暗示了悠闲自在的情感基调。<br>
- > B ．颈联中的"明月"二字，照应了诗题中的"秋夕","没远烟"写出了水面上孤帆疾驰的情状，含有一个时间、空间的变化过程。<br>
+ > B ．颈联中的"明月"二字，照应了诗题中的"秋夕","没远烟"写出了水面上孤帆疾驰的情状~~（开船的怕不是个逮虾户）~~，含有一个时间、空间的变化过程。<br>
  > C ．尾联使用对比手法，拿"渔人"的"空老"和"太公"的"贤"进行对比，同时也揭示出"渔人"悲剧命运的根源在于自身才德不够。<br>
  > D ．该诗通过对上秋夕幽美景色的描绘，借助太公垂钓的典故，表达了诗人热爱自然又不愿老死江湖，渴望得到重用的情感。
 
