--- a/source/_posts/渭上秋夕闲望.md
+++ b/source/_posts/渭上秋夕闲望.md
@@ -10,9 +10,11 @@ top_img: https://api.dujin.org/bing/1920.php
 cover: https://tva4.sinaimg.cn/large/0075LAc9ly1h6pwmrjtynj30ro0dx17w.jpg
 ---
 
+<div class='tip'><p>这首诗我在百度上查了好久，知乎上问了也没人回答，知网甚至都查了，啥资料都没有，甚至还让chatGPT赏析了一下，但是毕竟人家不知道背景知识也没啥帮助，只好<s>乱讲</s>随便讲讲了</p></div>
+
+
 <center><h1>渭上秋夕闲望</h1></center>
 
-<div class='tip'><p>这首诗我在百度上查了好久，知乎上问了也没人回答，知网甚至都查了，啥资料都没有，只好乱讲了</p></div>
 
 <center><h3>
 
